--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-joblib==1.4.2
-pandas==2.3.1
-requests==2.32.4
-scikit-learn==1.4.2
-streamlit==1.32.0
+# joblib==1.4.2
+# pandas==2.3.1
+# requests==2.32.4
+# scikit-learn==1.4.2
+# streamlit==1.32.0
+joblib==1.3.2
+pandas==1.5.3
+requests==2.31.0
+scikit-learn==1.2.2
+streamlit==1.24.0
